test/expected/declare_thf_v.out
declare f as throw function
        ^
9: error: "throw" is no longer supported in C++20; did you mean "noexcept"?
